updating versions 2